--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router": "5.3.3",
+    "react-router-dom": "5.3.3",
     "react-scripts": "4.0.0",
     "styled-components": "5.3.5"
   },
