--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-router": "5.3.3",
     "react-router-dom": "5.3.3",
     "react-scripts": "4.0.0",
+    "recoil": "0.7.5",
     "styled-components": "5.3.5"
   },
   "devDependencies": {
